# libcamera-framegrabber

./: CMakeLists.txt  FrameGrabber.java  README.md  grab.sh
include/: frame_grabber.hpp
src/: blocking_deque.cpp  buffer_mapper.cpp  frame_grabber.cpp  frame_grabber.hpp  jni_frame_grabber.cpp  stereo_frame_grabber.cpp
